<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Added Practice</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="TextView3">IDK</string>
    <string name="TextView4">1/10</string>
    <string name="TextView5"> </string>
    <string name="TextView6">counter</string>
    <string name="nameEntryTitle">Enter Your Name:</string>
    <string name="nameDiaOk">OK</string>
    <string name="nameDiaCancel">CANCEL</string>
    <string name="title_activity_settings">Settings</string>
    <string name="continue_button">Continue</string>

</resources>
