<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bgtall01"
    android:orientation="vertical" >

    

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_gravity="right"
        >
		
        
    <ImageButton 
        android:id="@+id/imageButton1" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_gravity="right" 
        android:onClick="contBtn1"
        android:text="@string/continue_button"
        android:background="@drawable/continue_blank"
        android:visibility="visible" />
    
        
        
    </RelativeLayout>

        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:background="@drawable/counter_score" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:paddingTop="15dp"
                android:text="@string/TextView6"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView6"
                android:paddingLeft="30dp"
                android:text="@string/TextView4"
                android:textSize="20sp" />
        </RelativeLayout>

<RelativeLayout
    android:layout_width="200dp"
    android:layout_height="40dp"
    android:layout_gravity="center_horizontal"
    android:layout_margin="2dp"
    android:background="@drawable/secleft"
    android:gravity="center_horizontal" >
            
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="TextView"
        android:padding="5dp"
        android:visibility="gone" />
    </RelativeLayout>

<RelativeLayout
    android:layout_width="200dp"
    android:layout_height="100dp"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/problemarea"
    android:gravity="center_horizontal" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:text="TextView2"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignParentTop="true"
        android:text="TextView1"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_above="@+id/textView2"
        android:layout_toLeftOf="@+id/textView2"
        android:text="@string/TextView3"
        android:textSize="20sp" />
    
    </RelativeLayout >

    <TextView
        android:id="@+id/textView5"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:background="@drawable/vinebar"
        android:text="@string/TextView5"
        android:textSize="40sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal" >

		<Button
		    android:id="@+id/button1"
		    android:layout_width="50dp"
		    android:layout_height="60dp"
		    android:layout_centerVertical="true"
		    android:layout_toLeftOf="@+id/button2"
		    android:layout_weight="1"
		    android:background="@drawable/appbackbtm1"
		    android:text="1"
		    android:textSize="30sp" />
        
        <Button
            android:id="@+id/button2"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/button3"
            android:layout_weight="1"
            android:background="@drawable/appbackbtm1"
            android:text="2"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:layout_weight="1"
            android:background="@drawable/appbackbtm1"
            android:text="3"
            android:textSize="30sp" />

    </RelativeLayout>

</LinearLayout>